--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<h1>BYTES & CHIPS SOFTWARE</h1>
+					<p>We are Nepal Based Software Company delivering solutions in Deep Learning, Computer Vision and AI</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
