--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>BYTES & CHIPS SOFTWARE</h1>
-					<p>We are Nepal Based Software Company delivering solutions in Deep Learning, Computer Vision and AI</p>
+					<p>We are Nepal Based Software Company delivering solutions in Deep Learning, Computer Vision and Articial Intillegence</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
