--- a/generic.html
+++ b/generic.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Industrious by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+	Bytes And Chips Template
+	Released for free under the Creative Commons Attribution 3.0 license 
 -->
 <html>
 	<head>
-		<title>Generic Page - Industrious by TEMPLATED</title>
+		<title>Sample Page - Bytes And Chips Software.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
