--- a/sample.html
+++ b/sample.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+				<a class="logo" href="index.html">Bytes And Chips Software</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -81,7 +81,7 @@
 						</section>
 					</div>
 					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+						&copy; Bytes And Chips Software
 					</div>
 				</div>
 			</footer>
