--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <!--
-	Industrious by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+	Bytes And Chips Template.
+	Released for free under the Creative Commons Attribution 3.0 license 
 -->
 <html>
 	<head>
@@ -17,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Bytes And Chips</a>
+				<a class="logo" href="index.html">Bytes And Chips Software</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -171,8 +170,9 @@
 				<div class="inner">
 					<div class="content">
 						<section>
-							<h3>Accumsan montes viverra</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+							<h3>About Bytes And Chips Software.</h3>
+							<p> Bytes Ans Chips Software has been helping clients find Futuristic Solutions Since 2009. Our Journey started with a web app development company into a Future Proof Software Company in the last decade. </p>
+							<p> We are leaders in Automation, Data  Analytics , Computer Vision , Machine Learning and Artificial Intelligence.<p>
 						</section>
 						<section>
 							<h4>Sem turpis amet semper</h4>
