--- a/index.html
+++ b/index.html
@@ -175,21 +175,21 @@
 							<p> We are leaders in Automation, Data  Analytics , Computer Vision , Machine Learning and Artificial Intelligence.<p>
 						</section>
 						<section>
-							<h4>Sem turpis amet semper</h4>
+							<h4>Services we offer</h4>
 							<ul class="alt">
-								<li><a href="#">Dolor pulvinar sed etiam.</a></li>
-								<li><a href="#">Etiam vel lorem sed amet.</a></li>
-								<li><a href="#">Felis enim feugiat viverra.</a></li>
-								<li><a href="#">Dolor pulvinar magna etiam.</a></li>
+								<li><a href="#">Data Analytics</a></li>
+								<li><a href="#">Computer Vision</a></li>
+								<li><a href="#">Artificial intelligence</a></li>
+								<li><a href="#">Machine Learning</a></li>
 							</ul>
 						</section>
 						<section>
 							<h4>Magna sed ipsum</h4>
 							<ul class="plain">
 								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+								<li><a href="https://www.facebook.com/bytesandchips"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
 								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+								<li><a href="https://github.com/bytesandchips"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 							</ul>
 						</section>
 					</div>
