--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 							</ul>
 						</section>
 						<section>
-							<h4>Find Us/h4>
+							<h4>Find Us</h4>
 							<ul class="plain">
 								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 								<li><a href="https://www.facebook.com/bytesandchips"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
