--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
+		<link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
 		<title>Bytes And Chips Software -Computer Vision and Deep Learning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
