--- a/elements.html
+++ b/elements.html
@@ -47,11 +47,15 @@
 						<div class="row">
 							<div class="col-6 col-12-medium">
 								
+								<!-- Video -->
+								<div>
 								<video width="320" height="240" controls>
  								 <source src="movie.mp4" type="video/mp4">
  	 							<source src="movie.ogg" type="video/ogg">
 								Your browser does not support the video tag.
 								</video>
+								</div>
+								<!---Video--->
 								<!-- Text -->
 									<h3>Text</h3>
 									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this
