--- a/video.html
+++ b/video.html
@@ -1,5 +1,17 @@
-<video width="320" height="240" controls>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Title of the document</title>
+</head>
+
+<body>
+Content of the document......
+  <video width="320" height="240" controls>
   <source src="banner.mp4" type="video/mp4">
   
 Your browser does not support the video tag.
 </video>
+</body>
+
+</html>
