--- a/video.html
+++ b/video.html
@@ -7,8 +7,17 @@
 
 <body>
 Content of the document......
-  <video width="920" height="680" controls>
-  <source src="banner.mp4" type="video/mp4">
+  <video id="sampleMovie" width="640" height="360" preload controls>
+	<source src="HTML5Sample_H264.mov" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+	<source src="HTML5Sample_Ogg.ogv" type='video/ogg; codecs="theora, vorbis"' />
+	<source src="HTML5Sample_WebM.webm" type='video/webm; codecs="vp8, vorbis"' />
+	<object type="application/x-shockwave-flash" data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" width="640" height="360">
+		<param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
+		<param name="allowFullScreen" value="true" />
+		<param name="wmode" value="transparent" />
+		<param name="flashvars" value='config={"clip":{"url":"HTML5Sample_flv.flv","autoPlay":false,"autoBuffering":true}}' />
+	</object>
+</video>
   
 Your browser does not support the video tag.
 </video>
