--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>Machine and Human Collabration.</h2>
+						<p> We don't solely rely on Machines , we have started the human machine collabration in our ongoing projects.</p>
 					</header>
 					<div class="highlights">
 						<section>
