--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>FUTURE = COMPUTER VISION + MACHILE LEARNING + AI</h2>
-					<p> Our Engineers and Data Scientist are focused in futuristic systems. We have developed <p>SYNCARPUS &trade;<p> which utilizes Computer Vision and Deep Learning to find soulution in Medical Imaging </p> 
+					<p> Our Engineers and Data Scientist are focused in futuristic systems. We have developed SYNCARPUS &trade; which utilizes Computer Vision and Deep Learning to find soulution in Medical Imaging </p> 
 				</div>
 			</section>
 
