--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								<blockquote>
 									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 								</blockquote>
-								<div class="author">
+								<div class="card">
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
