--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 								<blockquote>
 									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 								</blockquote>
-								<div class="author">
+								<div class="card">
 									<div class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Binod Paudyal</strong> <span>Founder-CEO.</span></p>
 								</div>
 							</div>
 						</section>
@@ -141,11 +141,11 @@
 								<blockquote>
 									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 								</blockquote>
-								<div class="author">
+								<div class="card">
 									<div class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong> Dr Suman Raj Bista</strong> <span>Head - Research.</span></p>
 								</div>
 							</div>
 						</section>
@@ -158,7 +158,7 @@
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Janet Smith</strong> <span> Mashusudan Subedi - Analyst.</span></p>
 								</div>
 							</div>
 						</section>
