--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span> Mashusudan Subedi - Analyst.</span></p>
+									<p class="credit">- <strong>Mashusudan Subedi </strong> <span>  Analyst.</span></p>
 								</div>
 							</div>
 						</section>
