--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Faucibus consequat lorem</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>The BRAIN behind Bytes And Chips Software</h2>
+						<p> Binod Paudyal founded Bytes And Chips Software as a Software Development Company in 2009. Madhusudan Subedi was the brainchild behind the succes of the company. A year later Dr. Suman Raj Bista joined the Company as the chief technology advisor.</p>
 					</header>
 					<div class="testimonials">
 						<section>
