--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 								</blockquote>
 								<div class="card">
 									<div class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/binod.jpg" alt="Binod Paudyal" />
 									</div>
 									<p class="credit">- <strong>Binod Paudyal</strong> <span>Founder-CEO.</span></p>
 								</div>
@@ -143,7 +143,7 @@
 								</blockquote>
 								<div class="card">
 									<div class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/suman.jpg" alt="Suman Raj Bista" />
 									</div>
 									<p class="credit">- <strong> Dr Suman Raj Bista</strong> <span>Head - Research.</span></p>
 								</div>
@@ -156,7 +156,7 @@
 								</blockquote>
 								<div class="card">
 									<div class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/madhu.jpg" alt="Madhusudan Subedi" />
 									</div>
 									<p class="credit">- <strong>Mashusudan Subedi </strong> <span>  Analyst.</span></p>
 								</div>
