--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Computer Engineer by Profession , Binod Paudyal lives in Kathmandu.His interests are Yoga, Meditation, Ayurveda and Deep Learning.</p>
 								</blockquote>
 								<div class="card">
 									<div class="image">
@@ -139,7 +139,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Holding a PHD in Computer Vision, Suman Raj Bista is currently in Brisbane, Australia .He loves travelling and playing soccer.</p>
 								</blockquote>
 								<div class="card">
 									<div class="image">
@@ -152,7 +152,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p> An MBA in Finance , Madhusudan can turn stones into gems. He lives in Candana and loves to travel.</p>
 								</blockquote>
 								<div class="card">
 									<div class="image">
