--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p> An MBA in Finance , Madhusudan can turn stones into gems. He lives in Candana and loves to travel.</p>
+									<p> An MBA in Finance , Madhusudan is a great financial analyst. He turn stones into gems. He lives in Candana and loves to travel and play soccer.</p>
 								</blockquote>
 								<div class="card">
 									<div class="image">
