--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Bytes And Chips Software</a>
+				<a class="logo" href="#">Bytes And Chips Software</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
