--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1 class="logo">Bytes And Chips Software</h1>
+				<h1 class="logo">
+  				<a href="#">
+    					<img src="images/logo.png" alt="Bytes And Chips Inc" />
+  				</a>
+				</h1>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
