--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1 class="logo">
-  				<a href="#">
-    					<img src="images/logo.png" alt="Bytes And Chips Inc" />
-  				</a>
-				</h1>
+				
+  				<a class="logo" href="#">Bytes And Chips Software</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
