--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				
-  				<a class="logo" href="#">Bytes And Chips Software</a>
+  				<div class="logo" onclick="window.location.href='#'"></div>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
