--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				
-  				<div class="logo" onclick="window.location.href='#'"></div>
+				<a class="logo" href="#">Bytes And Chips Software</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
