--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="https://www.bytesnchips.com/">Home</a></li>
-					<li><a href="https://www.bytesnchips.com/about.html">About</a></li>
+					<li><a href="https://www.bytesnchips.com/about">About</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
