--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<ul class="links">
 					<li><a href="https://www.bytesnchips.com/">Home</a></li>
 					<li><a href="https://www.bytesnchips.com/about">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="https://www.bytesnchips.com/contact">Contact</a></li>
 				</ul>
 			</nav>
 
