--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>Sample Page - Bytes And Chips Software.</title>
+		<title>About- Bytes And Chips Software.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
