--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="https://www.bytesnchips.com/">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="https://www.bytesnchips.com/">Contact</a></li>
 				</ul>
 			</nav>
 
