--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 				<ul class="links">
 					<li><a href="https://www.bytesnchips.com/">Home</a></li>
 					<li><a href="#">About</a></li>
-					<li><a href="https://www.bytesnchips.com/">Contact</a></li>
+					<li><a href="https://www.bytesnchips.com/contact">Contact</a></li>
 				</ul>
 			</nav>
 
