--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="https://www.bytesnchips.com">Home</a></li>
+					<li><a href="https://www.bytesnchips.com/about">About</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
 
