--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="https://www.bytesnchips.com/">Home</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="https://www.bytesnchips.com/about">About</a></li>
 					<li><a href="https://www.bytesnchips.com/contact">Contact</a></li>
 				</ul>
