--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fas-file-alt"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-file-text"><span class="label">Icon</span></a>
 									<h3>Natural Language Processing</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
