--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
+									<a href="#" class="icon fa-database"><span class="label">Icon</span></a>
+									<h3>Data Alaytics</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
