--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
+									<a href="#" class="fa-brain"><span class="label">Icon</span></a>
+									<h3>Artificial Intelligence</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
