--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 						<section>
 							<div class="content">
 								<header>
+									<a href="#" class="icon fa-brain"><span class="label">Icon</span></a>
 									
-									<i class="fas fa-brain"></i>
 									<h3>Artificial Intelligence</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
