--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-brain"><span class="label">Icon</span></a>
+									<span class="fas fa-brain"></span>
 									
 									<h3>Artificial Intelligence</h3>
 								</header>
