--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<span class="fas fa-brain"></span>
-									
+									<i class="fas fa-brain"></i>
 									<h3>Artificial Intelligence</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
