--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-eye"><span class="label">Icon</span></a>
+									<a href="#" class="icon fas fa-eye"><span class="label">Icon</span></a>
 									<h3>Computer Vision</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
