--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<i class="fas fa-brain"></i>
+									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
 									<h3>Artificial Intelligence</h3>
 								</header>
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
