--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<a href="#" class="icon fas fa-eye"><span class="label">Icon</span></a>
 									<h3>Computer Vision</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>SYNCARPUS is an unique solution in Medical Imaging using OpenCV , TensorFlow and Keras.</p>
 							</div>
 						</section>
 						<section>
@@ -64,7 +64,7 @@
 									<a href="#" class="icon fa-file-text"><span class="label">Icon</span></a>
 									<h3>Natural Language Processing</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>We are currently developing a chatbot PANINI which can recognize Languages based on sanskrit like Nepali,Maithali.</p>
 							</div>
 						</section>
 						<section>
