--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<a href="#" class="icon fa-database"><span class="label">Icon</span></a>
 									<h3>Data Alaytics</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Our Python Developers are industry standard. Using NumPy , Pandas and Matplotlib we develop custom tailored solutions to our clients .</p>
 							</div>
 						</section>
 						<section>
