--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
 									<h3>Predective Analysis</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>We use different techniques from data mining, statistics, modeling, machine learning, and artificial intelligence to analyze current data to make predictions about future.</p>
 							</div>
 						</section>
 						<section>
