--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<a href="#" class="icon fa-cogs"><span class="label">Icon</span></a>
 									<h3>Artificial Intelligence</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>We help build intelligent systems in any field like gaming ,finance , healthcare and education. We have a mission to build a state of the art AI Lab in Nepal. </p>
 							</div>
 						</section>
 						<section>
@@ -100,7 +100,7 @@
 									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Machine Learning</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>We work on Tensorflow, Scikit-learn, Keras, Caffe, MLlib, and other machine learning frameworks to develop unique solutions.</p>
 							</div>
 						</section>
 					</div>
