--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<a href="#" class="icon fas fa-eye"><span class="label">Icon</span></a>
 									<h3>Computer Vision</h3>
 								</header>
-								<p>SYNCARPUS is an unique solution in Medical Imaging using OpenCV , TensorFlow and Keras.</p>
+								<p>We devliver solutions in Computer Vision.SYNCARPUS is an unique solution in Medical Imaging using OpenCV , TensorFlow and Keras.</p>
 							</div>
 						</section>
 						<section>
