--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<a href="#" class="icon fa-file-text"><span class="label">Icon</span></a>
 									<h3>Natural Language Processing</h3>
 								</header>
-								<p>We are currently developing a chatbot PANINI which can recognize Languages based on sanskrit like Nepali,Maithali.</p>
+								<p>We are currently developing a chatbot PANINI which can recognize Languages based on Sanskrit like Nepali, Maithali and Hindi.</p>
 							</div>
 						</section>
 						<section>
