--- a/contact.html
+++ b/contact.html
@@ -40,14 +40,16 @@
 			<section id="main" class="wrapper">
 				<div class="inner">
 					<div class="content">
-						<header>
-							<h2>Who are we ?</h2>
-						</header>
+		<!-- Elements -->
+			<div class="row">
+			<div class="col-6 col-12-medium">
+
 						
-    </div>
-  </div>
-</div><br>
-			</section>
+   			    </div>
+			   </div>
+			  </div>
+			</div>
+		      </section>
 
 		<!-- Footer -->
 			<footer id="footer">
