--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,45 @@
 										<li><a href="#" class="icon fa-windows"><span class="label">Windows</span></a></li>
 										<li><a href="#" class="icon fa-500px"><span class="label">500px</span></a></li>
 									</ul>
+				<!-- Icons -->
+									<h3>Icons</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+										<li><a href="#" class="icon fa-apple"><span class="label">Apple</span></a></li>
+										<li><a href="#" class="icon fa-windows"><span class="label">Windows</span></a></li>
+										<li><a href="#" class="icon fa-500px"><span class="label">500px</span></a></li>
+									</ul>
+				<!-- Icons -->
+									<h3>Icons</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+										<li><a href="#" class="icon fa-apple"><span class="label">Apple</span></a></li>
+										<li><a href="#" class="icon fa-windows"><span class="label">Windows</span></a></li>
+										<li><a href="#" class="icon fa-500px"><span class="label">500px</span></a></li>
+									</ul>
+				<!-- Icons -->
+									<h3>Icons</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+										<li><a href="#" class="icon fa-apple"><span class="label">Apple</span></a></li>
+										<li><a href="#" class="icon fa-windows"><span class="label">Windows</span></a></li>
+										<li><a href="#" class="icon fa-500px"><span class="label">500px</span></a></li>
+									</ul>
 				
    			    </div>
 			   </div>
