--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
 					<div class="content">
 		<!-- Elements -->
 			<div class="row">
+			<div class="row">
 			<div class="col-6 col-12-medium">
 					<!-- Icons -->
 									<h3>Icons</h3>
@@ -54,8 +55,10 @@
 										<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 										<li><a href="#" class="icon fa-apple"><span class="label">Apple</span></a></li>
 										<li><a href="#" class="icon fa-windows"><span class="label">Windows</span></a></li>
-										<li><a href="#" class="icon fa-500px"><span class="label">500px</span></a></li>
-									</ul>
+										<li><a href="#" class="icon fa-500px"><span class="label">500px</span></a></li>	
+				
+				</ul>
+				</div>
    			    </div>
 			   </div>
 			  </div>
