--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,8 @@
 				
 				</ul>
 				
+				<!-- Image -->
+				<span class="image fit"><img src="images/pic01.png" alt="" /></span>
    			    </div>
 			   </div>
 			  </div>
