--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 				</ul>
 				
 				<!-- Image -->
-				<span class="image fit"><img src="images/pic01.png" alt="" /></span>
+				<span class="image right"><img src="images/bncrobot2.png" alt="" /></span>
    			    </div>
 			   </div>
 			  </div>
