--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,9 @@
 				
 				</ul>
 				
+				<div class="col-6 col-12-medium">
 				<!-- Image -->
-				<span class="image right"><img src="images/bncrobot2.png" alt="" /></span>
+					<span class="image fit"><img src="images/bncrobot2.png" alt="" /></span>
    			    </div>
 			   </div>
 			  </div>
