--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,16 @@
 				<div class="col-6 col-12-medium">
 				<!-- Image -->
 					<span class="image fit"><img src="images/bncrobot2.png" alt="" /></span>
+					<!-- Icons -->
+									<h3>Follow us </h3>
+									<ul class="icons">
+										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+										
+					
    			    </div>
 			   </div>
 			  </div>
