--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 					</div>
 							<div class="col-6 col-12-medium">
 								<!-- Form -->
-									<h3>Form</h3>
+									<h3>Contact Us</h3>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall">
