--- a/about.html
+++ b/about.html
@@ -66,7 +66,18 @@
   <h3>Technoliges We use</h3>
   <br>
   <div class="row">
-
+	<div class="col-sm-2">
+		<img src="images/icons8-java-logo-48.png" class="img-responsive" style="width:100%" alt="tensorflow">
+  
+	  </div>
+	  <div class="col-sm-2">
+		<img src="images/icons8-react-30.png" class="img-responsive" style="width:100%" alt="tensorflow">
+  
+	  </div>
+	  <div class="col-sm-2">
+		<img src="images/angular.png" class="img-responsive" style="width:100%" alt="tensorflow">
+  
+	  </div>
     <div class="col-sm-2">
       <img src="images/tensorflow.png" class="img-responsive" style="width:100%" alt="tensorflow">
 
