--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>BYTES & CHIPS SOFTWARE</h1>
-					<p>We are Nepal Based Software Company delivering solutions in Deep Learning, Computer Vision and Artificial Intillegence</p>
+					<p>We are Nepal Based Software Company delivering solutions in Software Development as well as  Deep Learning, Computer Vision and Artificial Intillegence</p>
 				</div>
 				
 			</section>
@@ -45,11 +45,20 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Machine and Human Collabration.</h2>
+						<h2>What we Do</h2>
 						<p> We don't solely rely on Machines , we have started the human machine collabration in our ongoing projects.</p>
 					</header>
 					<div class="highlights">
 						<section>
+							<div class="content">
+								<header>
+									<a href="#" class="icon fas fa-desktop"><span class="label">Icon</span></a>
+									<h3>Software Development</h3>
+								</header>
+								<p>We devliver Software Development solutions to our valued clients using latest technology stack such as JAVA, React Js, Angular Js, Node Js.</p>
+							</div>
+						</section>
+						<!-- <section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fas fa-eye"><span class="label">Icon</span></a>
@@ -57,7 +66,7 @@
 								</header>
 								<p>We devliver solutions in Computer Vision.SYNCARPUS is an unique solution in Medical Imaging using OpenCV , TensorFlow and Keras.</p>
 							</div>
-						</section>
+						</section> -->
 						<section>
 							<div class="content">
 								<header>
@@ -178,6 +187,7 @@
 						<section>
 							<h4>Services we offer</h4>
 							<ul class="alt">
+								<li><a href="#">Software Development</a></li>
 								<li><a href="#">Data Analytics</a></li>
 								<li><a href="#">Computer Vision</a></li>
 								<li><a href="#">Artificial intelligence</a></li>
